style.css
/* Logo colours: #2f352f, #00bc8a, #ffffff, #505050*/

* {
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}
body{
    background-color: #1A1720;
    margin: 0;
}
a:link{
    color: whitesmoke;
}
a:visited{
    color: grey
}
@keyframes splash{
    0% {opacity: 0;}
    100% {opacity: 100;}
}
#splashImg {
    margin: auto;
    width: 80%;
    height: auto;
    max-width: 666px;
    animation-name: splash;
    animation-duration: 2s;
    animation-iteration-count: 1;
}
.header{
    position: fixed;
    top: 0;
    height:75px;
    width: 100%;
    color: white;
    font-size: 18px;
    background-color: #36323E;
    border-bottom: 2px;
    border-top: 0;
    border-left: 0;
    border-bottom-color: black;
    border-style: solid;
    z-index: 2;
    display: flex;
    justify-content: center;
}
#headMenu{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    width: 87%;
}
.buttGroup{
    margin-right: 10px;
    margin-bottom: 10px;
}
.buttGroup button{
    background-color: transparent;
    /* border-radius: 8px; */
    color: white;
    padding: 6px;
    font-size: large;
    transition-duration: 0.25s;
    border: 0;
}
.buttGroup button:hover{
    color: #00bc8a;
}
.buttGroup button:active{
    color: #00bc8a;
}
.buttGroup button.selected{
    color: #00bc8a;
}
.tooltip{
    position: relative;
    display: inline-block;
}
.tooltip .tooltipText {
    opacity: 0;
    transition: 0.2s;
    width: auto;
    background-color: black;
    color: white;
    text-align: center;
    padding: 8px;
    border-radius: 8px;
    z-index: 3;
    position: absolute;
    top: 100%;
    right: 50%;
}
.tooltip:hover .tooltipText {
    opacity: 1;
}

/* Main body styling */

.main{
    margin-top: 120px;
    margin-right: 5%;
    margin-left: 5%;
}

/* Tab styling */

#folderTabs {
    position: fixed;
    z-index: 2;
    top: 76px;
    left: 0;
    margin-left: 6%;
    margin-right: 6%;
    max-height: 50px;
    white-space: nowrap;
    overflow-x: scroll;
    scrollbar-color: #00bc8a #1A1720;
    scrollbar-width: thin;
    width: 95%;
    rotate: 180deg;
    direction: rtl;
}
.tabGroup button {
    background-color: #36323E;
    padding: 5px;
    color: white;
    border: 2px solid #1A0C18;
    border-top: none;
    font-size: 20px;
    border-bottom-right-radius: 8px;
    border-bottom-left-radius: 8px;
    /* margin-right: 2px; */
    min-width: 75px;
    rotate: 180deg;
}
.tabGroup button.active {
    background-color: #00bc8a;
}
.tabGroup button:hover {
    background-color: #00bc8a;
}

/* Content folder styling */

.flexContainer {
    display: flex;
}

#contentFolder {
    background-color: 2E2843;
    color: white;
    padding: 10px;
    /* border-radius: 8px;
    border-style: solid;
    border-width: 2px;
    border-color: #1A0C18; */
    width: 75vw ;
    margin: auto;
    flex-wrap: wrap;
}
.contentCard {
    background-color: #221E2A;
    border-width: 1px;
    border-style: solid;
    border-color: black;
    border-radius: 8px;
    padding: 5px;
    box-shadow: 2px 2px 10px rgba(1, 1, 1, 0.605);
    margin-bottom: 32px;
    position: relative;
    width: 100%;

}
.contentCard img {
    display: block;
    margin: auto;
    border-radius: 10px;
    border-style: solid;
    border-width: 2px;
    border-color: black;
    max-width: 98%;
    height: auto;
}
.contentCard h3 {
    text-align: center;
}
.contentFeed{
    display: none;
}
.contentFeed.contentDisplay {
    display: block;
}

.cardButton {
    background-color: transparent;
    border: none;
    color: white;
    padding: 6px;
    font-size: large;
    transition-duration: 0.25s;
    position: absolute;
    right: 5px;
    top: 5px;
}
.cardButton:hover{
    color: #00bc8a;
}
.cardButton:active{
    color: #00bc8a;
}
.cardMenu {
    background-color: #1A0C18;
    border-radius: 8px;
    color: white;
    padding: 6px;
    font-size: large;
    transition-duration: 0.25s;
    position: absolute;
    right: 5px;
    top: 5px;
}
.cardMenu button {
    background-color: #1A0C18;
    border-radius: 8px;
    color: white;
    padding: 6px;
    font-size: large;
    transition-duration: 0.25s;
}
.cardMenu button:hover {
    background-color: #00bc8a;
}
#scrollTop {
    background-color: #1A0C18;
    border-radius: 8px;
    color: white;
    padding: 6px;
    font-size: large;
    transition-duration: 0.25s;
    position: fixed;
    bottom: 30px;
    right: 30px;
    display: none;
}
#scrollTop:hover {
    background-color: #00bc8a;
}
h3 {
    font-size: 22px;
    font-weight: 600;
}

/* Form Styling */

.popupForm {
    display: none;
    border-width: 2px;
    border-style: solid;
    border-color: black;
    border-radius: 8px;
    z-index: 3;
    padding: 8px;
    background-color: rgb(35, 35, 35);
    color: white;
}
.popupForm * {
    margin-bottom: 5px;
}
#folderForm {
    position: fixed;
    top: 25px;
    right: 0;
}
#feedForm {
    position: fixed;
    top: 25px;
    right: 0;
}
#editFeedForm {
    position: fixed;
    top: 100px;
    right: 0;
}
#feedChangesForm {
    position: fixed;
    top: 100px;
    right: 0;
}
#weatherForm{
    position: fixed;
    top: 100px;
    right: 20px;
    width: 200px;
}
#removeFolderForm {
    position: fixed;
    top: 140px;
    right: 20px;
}
#cityForm{
    position: fixed;
    top: 90px;
    right: 0;
    display: block;
}
.formContainter{
    max-width: 300px;
    padding: 50px;
    background-color: rgb(41, 41, 41);

}
.formButton{
    background-color: rgba(4, 32, 35, 0.782);
    border-radius: 8px;
    color: white;
    padding: 6px;
    font-size: large;
    transition-duration: 0.25s;
    margin-top: 5px;
}
.formButton:hover{
    background-color: #00bc8a;
}
.formButton:active{
    background-color: #00bc8a;
}
.formContainter input[type=text] {
    width: 100%;
    padding: 8px;
    margin: 5px;
    border: none;
    background: white;
}

/* Sidebar */

#sidebar{
    position: fixed;
    height: calc(100% - 95px);
    width: 0px;
    right: 0;
    bottom: 0;
    background-color: rgba(41, 41, 41, 0.75);
    border-color: black;
    border-width: 0 2px 0 2px;
    border-style: solid;
    padding-top: 10px;
    padding-left: 0px;
    padding-bottom: 10px;
    color: white;
    z-index: 1;
    display: block;
}
#sidebar button{
    background-color: transparent;
    border: none;
    color: white;
    font-size: large;
    margin-top: 10px;
    margin-left: 10px;
    padding: 10px;
    text-align: left;
}
#sidebar.menuDisplay {
    width: 200px;
}

/* Weather Components */
#weatherDiv {
    width: 100%;
    display: none;

}
#weatherDisplay {
    width: 100%;
    padding: 8px;
    display: none;
}

